--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-calendar": "^4.2.1",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
